# ReutovMax

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml  railway.json  requirements.txt
prompts/: contacts.md  faq.md  system_prompt.md
src/reutov_max/: app.py  config.py  geo.py  handlers.py  keyboards.py  max_client.py  openai_service.py  operator.py  tickets.py
src/reutov_max/utils/: media.py
tests/: test_handlers.py
